[package]
name = "ecosystem-homework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
nanoid = "0.4.0"
serde = { version = "1.0.206", features = ["derive"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread", "rt", "net"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "tls-rustls"] }
